ch8/ch8-default-assertion-capital-letter-exercise/builder-usage/tests/fails/no_default.rs
use builder_macro::Builder;

struct DoesNotImplementDefault;

#[derive(Builder)]
#[builder_defaults]
struct ExampleStruct {
    not: DoesNotImplementDefault
}

fn main() {}
